--- a/m.html
+++ b/m.html
@@ -1,4 +1,16 @@
-body {
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - 9-Tipps: #9 background-image for Text</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@900&display=swap" rel="stylesheet"> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<link rel="stylesheet" href="./style.css">
+
+<style>
+	
+	body {
   background: #000405;
   min-height: 100vh;
   display: flex;
@@ -26,3 +38,13 @@ p {
     background-clip: text;
   }
 }
+</style>
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<p>Ri <span class="fancy">des</span></p>
+<!-- partial -->
+  
+</body>
+</html>
